<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2">


    <LinearLayout

        android:orientation="vertical">



    </LinearLayout>

    <TextView android:text="@string/destino" android:textStyle="bold" />

    <EditText
        android:id="@+id/destino"
        android:inputType="text">
    </EditText>

    <TextView android:text="@string/tipo_da_viagem" android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/tipoViagem"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/lazer"
            android:checked="true"
            android:text="@string/lazer"
            android:textStyle="bold">
        </RadioButton>

        <RadioButton
            android:id="@+id/negocios"
            android:layout_marginLeft="30dp"
            android:text="@string/negocios"
            android:textStyle="bold">
        </RadioButton>
    </RadioGroup>

    <TableRow>

        <TextView
            android:layout_gravity="center"
            android:text="@string/data_da_chegada"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_gravity="center"
            android:text="@string/data_da_saida"
            android:textStyle="bold">
        </TextView>

    </TableRow>

    <TableRow>

    <Button
        android:id="@+id/dataChegada"
        android:onClick="selecionarData"
        android:text="@string/selecione">
    </Button>

    <Button
        android:id="@+id/dataSaida"
        android:onClick="selecionarData"
        android:text="@string/selecione">
    </Button>

    </TableRow>

    <TextView android:text="@string/orcamento" android:textStyle="bold" />

    <EditText
        android:id="@+id/orcamento"
        android:inputType="numberDecimal">
    </EditText>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/quantidade_de_pessoas"
            android:textStyle="bold">
        </TextView>

        <EditText
            android:id="@+id/quantidadePessoas"
            android:inputType="number">
        </EditText>

    </TableRow>

    <Button
        android:onClick="criarViagem"
        android:text="@string/criar_viagem">
    </Button>

</TableLayout>


</ScrollView>
