<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#015488"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/novo_gasto"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/destino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold">
            </TextView>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1">

                <TableRow>

                    <TextView
                        android:text="@string/valor"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/data"
                        android:textStyle="bold">
                    </TextView>
                </TableRow>

                <TableRow>

                    <EditText
                        android:id="@+id/valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal">
                    </EditText>

                    <Button
                        android:id="@+id/data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="selecionarData"
                        android:text="@string/selecione">
                    </Button>

                </TableRow>
            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>